default/objects/PQ_AP_Score__mdt/PQ_AP_Score__mdt.object-meta.xml
<CustomObject>
    <description>Settings used in the formulas used to calculate a score for an account plan</description>
    <label>Account Plan Score Settings</label>
    <pluralLabel>AP Score Settings</pluralLabel>
</CustomObject>