default/objects/PQ_AP_Score__mdt/fields/Count_BP_Low__c.field-meta.xml
<CustomField>
    <fullName>Count_BP_Low__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The low breakpoint for the number of objects when calculating the score</description>
    <inlineHelpText>If the count is below this value it will have zero points for the score</inlineHelpText>
    <label>Count Breakpoint Low</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>