default/objects/PQ_AP_Score__mdt/fields/Count_BP_Mid__c.field-meta.xml
<CustomField>
    <fullName>Count_BP_Mid__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The middle breakpoint for the number of objects when calculating the score</description>
    <inlineHelpText>If the count is below this value but above the low value the low breakpoint score will be used, if above this value but below the high value the mid breakpoint score will be used</inlineHelpText>
    <label>Count Breakpoint Mid</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>