default/objects/PQ_AP_Score__mdt/fields/Date_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Date_Field_API_Name__c</fullName>
    <description>The field on the account plan that holds the date value that is used for time decay of the score this metadata record represents</description>
    <inlineHelpText>If this field is not set or if &apos;Use Time Decay&apos; is not checked then time decay will not be used for the scoring of this object.  Time decay will also not work if the field entered is invalid or not a date or date time field on the Account Plan object.</inlineHelpText>
    <label>Date Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>