default/objects/PQ_AP_Score__mdt/fields/Score_BP_Low__c.field-meta.xml
<CustomField>
    <fullName>Score_BP_Low__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The score used if the count is equal to the low breakpoint or between the low and mid breakpoint values</description>
    <label>Count Breakpoint Score Low</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>