default/objects/PQ_AP_Score__mdt/fields/Score_BP_Mid__c.field-meta.xml
<CustomField>
    <fullName>Score_BP_Mid__c</fullName>
    <defaultValue>5</defaultValue>
    <description>The score used if the count is equal to the middle breakpoint or between the middle and high breakpoint values</description>
    <label>Count Breakpoint Score Mid</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>