default/objects/PQ_AP_Score__mdt/fields/Score_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Score_Field_API_Name__c</fullName>
    <description>The field on the account plan that holds the score value that this metadata record represents</description>
    <inlineHelpText>This must be a field on the pqcrush__Account_Plan__c object and must be the API name.  Please make sure it&apos;s a valid API name for a field.</inlineHelpText>
    <label>Score Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>