default/objects/PQ_AP_Score__mdt/fields/Score_Object__c.field-meta.xml
<CustomField>
    <fullName>Score_Object__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, this objects score is included in the overall Account Plan Score</description>
    <label>Score Object</label>
    <type>Checkbox</type>
</CustomField>