default/objects/PQ_AP_Score__mdt/fields/Threshold_Limit__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Limit__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The threshold Limit used to set a value that sets a limit or boundary</description>
    <label>Threshold Limit</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>