default/objects/PQ_AP_Score__mdt/fields/Time_BP_High__c.field-meta.xml
<CustomField>
    <fullName>Time_BP_High__c</fullName>
    <defaultValue>90</defaultValue>
    <description>The number of days used for the upper time breakpoint since any records of this type have been modified</description>
    <inlineHelpText>This is the final breakpoint for time decayed scoring</inlineHelpText>
    <label>Time Breakpoint High</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>