default/objects/PQ_AP_Score__mdt/fields/Time_BP_Mid__c.field-meta.xml
<CustomField>
    <fullName>Time_BP_Mid__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The number of days used for the middle time breakpoint since any records of this type have been modified</description>
    <inlineHelpText>This is the second breakpoint in days that time decay can hit</inlineHelpText>
    <label>Time Breakpoint Mid</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>