default/objects/PQ_AP_Score__mdt/fields/Time_BP_Mult_Low__c.field-meta.xml
<CustomField>
    <fullName>Time_BP_Mult_Low__c</fullName>
    <defaultValue>0.75</defaultValue>
    <description>The multiplier if the number of days since any record was updated is greater than or equal to the low time breakpoint but less than the middle time breakpoint</description>
    <inlineHelpText>This value should be between 0.00 and 1.00</inlineHelpText>
    <label>Time Breakpoint Multiplier Low</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>